# MolGAN-API

./: README.md  pyproject.toml
molgan/: Dockerfile  docker-compose.yaml  dump.rdb  main.py  models.py  pyproject.toml  requirements.txt  utils.py
molgan/data/: data.csv
molgan/fast_jtnn/: jtnn_vae.py
